# hyperbytedb

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.proxy-runtime  Dockerfile.runtime  LICENSE  README.md  SECURITY.md  config.toml.example  docker-compose.yml  mkdocs.yml  rust-toolchain.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/actions/: action.yml
.github/actions/install-ci-deps/: install-ci-deps.sh
.github/scripts/: checkout-chdb-rust.sh  run-in-rust-container.sh  rust-container-setup.sh
.github/workflows/: ci.yml  docs.yml  release.yml
deploy/compose/: docker-compose.getting-started.yml  prometheus.yml  telegraf.conf
deploy/compose/alloy/: config.alloy
deploy/compose/grafana/: datasources.getting-started.yml
deploy/compose/grafana/dashboards/: hyperbytedb-cluster.json  hyperbytedb-logs.json  machine-monitoring.json
deploy/compose/loki/: loki.yaml
deploy/compose/tempo/: tempo.yaml
deploy/examples/: single-node.yaml  three-node.yaml
deploy/kind/: kind-config.yaml  setup.sh
deploy/kind/grafana/dashboards/: hyperbytedb-cluster.json  logging.json  machine-monitoring.json  (+1 more)
deploy/kind/manifests/: hyperbytedb-cr.yaml  namespace.yaml  operator.yaml
docs/: benchmarks.md  glossary.md  index.md
docs/deep-dive/: README.md  deep-dive-clustering.md  deep-dive-compaction.md  deep-dive-read-path.md  deep-dive-self-repair.md  deep-dive-write-path.md
docs/developer-guide/: architecture.md  building-and-ci.md  coding-standards.md  contributing.md  dependency-audit.md  development-setup.md  index.md  system-architecture.md  testing.md
docs/developer-guide/internals/: core-modules.md  extension-points.md  index.md  key-design-decisions.md  replication-design.md
docs/engineering/: code-review-rubric.md
docs/overrides/: home.html
docs/stylesheets/: home.css
docs/user-guide/: administration.md  advanced-features.md  authentication.md  basic-operations.md  cli.md  common-workflows.md  configuration.md  index.md  installation.md  rate-limiting.md  reference.md  resource-sizing.md  troubleshooting.md  v1-stable-scope.md
docs/user-guide/operator/: backup-restore.md  cluster.md  hyperbytedb-proxy.md  index.md  installation.md
hyperbytedb/: Cargo.toml
hyperbytedb-cli/: Cargo.toml
hyperbytedb-cli/src/: args.rs  error.rs  lib.rs  main.rs
hyperbytedb-cli/src/client/: admin.rs  auth.rs  http_transport.rs  mod.rs  query.rs  write.rs
hyperbytedb-cli/src/config/: mod.rs
hyperbytedb-cli/src/export/: mod.rs
hyperbytedb-cli/src/import/: mod.rs
hyperbytedb-cli/src/output/: mod.rs
hyperbytedb-cli/src/repl/: complete.rs  meta.rs  mod.rs
hyperbytedb-cli/src/session/: mod.rs
hyperbytedb-cli/tests/: cli_e2e.rs
hyperbytedb-proxy/: Cargo.toml  Dockerfile
hyperbytedb-proxy/benches/: routing.rs
hyperbytedb-proxy/benches/support/: mod.rs
hyperbytedb-proxy/src/: admin.rs  backend.rs  config.rs  lib.rs  main.rs  pool.rs  proxy.rs
hyperbytedb/benches/: flush_service.rs  ingestion_columnar.rs  ingestion_line_protocol.rs  ingestion_prepared.rs  query_fixed_dataset.rs
hyperbytedb/benches/support/: mod.rs
hyperbytedb/src/: bootstrap.rs  config.rs  error.rs  lib.rs  main.rs
hyperbytedb/src/adapters/: auth.rs  mod.rs
hyperbytedb/src/adapters/chdb/: catalog.rs  connection_pool.rs  mod.rs  native_adapter.rs  query_adapter.rs  session.rs
hyperbytedb/src/adapters/cluster/: hinted_handoff.rs  mod.rs  peer_client.rs  replication_log.rs  sync_client.rs  transport.rs
hyperbytedb/src/adapters/cluster/raft/: log_store.rs  mod.rs  network.rs  state_machine.rs  types.rs
hyperbytedb/src/adapters/http/: auth_middleware.rs  chdb.rs  cluster.rs  error.rs  metrics.rs  middleware.rs  mod.rs  peer_handlers.rs  ping.rs  query.rs  raft_handlers.rs  rate_limit.rs  response.rs  router.rs  statements.rs  write.rs
hyperbytedb/src/adapters/metadata/: mod.rs  rocksdb_meta.rs
hyperbytedb/src/adapters/wal/: arrow_cache.rs  batching_wal.rs  mod.rs  rocksdb_wal.rs  wal_ipc.rs
hyperbytedb/src/application/: backup.rs  columnar_msgpack.rs  continuous_query_service.rs  disk_monitor.rs  flush_service.rs  ingest_metadata.rs  ingestion_service.rs  line_protocol.rs  materialized_view_service.rs  mod.rs  msgpack_ingest.rs  peer_ingestion_service.rs  peer_query_service.rs  predicate_sql.rs  query_service.rs  replication_apply.rs  replication_dispatch.rs  retention_service.rs  schema_mutation_apply.rs  statement_summary.rs  system_trace.rs  wal_append.rs
hyperbytedb/src/application/arrow_ingest/: columnar.rs  line_protocol.rs  mod.rs  msgpack.rs  points.rs
hyperbytedb/src/application/cluster/: bootstrap.rs  drain.rs  heartbeat.rs  hinted_handoff.rs  leader_monitor.rs  mod.rs  raft_formation.rs  sync_manifest.rs
hyperbytedb/src/application/runtime/: mod.rs  tracing_init.rs
hyperbytedb/src/domain/: arrow_coalesce.rs  chdb_naming.rs  column_mapping.rs  continuous_query.rs  cq_schedule.rs  database.rs  field_type.rs  materialized_view.rs  measurement.rs  mod.rs  point.rs  point_coalesce.rs  prepared_wal.rs  query_result.rs  rollup.rs  series.rs  user.rs  wal.rs
hyperbytedb/src/domain/cluster/: membership.rs  mod.rs  replication_wire.rs  sync.rs  types.rs
hyperbytedb/src/ports/: auth.rs  flush.rs  ingestion.rs  metadata.rs  mod.rs  points_sink.rs  query.rs  replication.rs  wal.rs
hyperbytedb/src/timeseriesql/: ast.rs  ddl_parser.rs  digest.rs  lexer.rs  mod.rs  parser.rs  to_clickhouse.rs
hyperbytedb/tests/: integration.rs  raft_integration.rs  security_auth.rs  sync_quorum_integration.rs
hyperbytedb/tests/compat/: combination_tests.rs  concurrent_tests.rs  cq_tests.rs  ddl_tests.rs  error_tests.rs  http_tests.rs  main.rs  metadata_tests.rs  prepared_wal_tests.rs  query_tests.rs  write_tests.rs
hyperbytedb/tests/e2e/: main.rs  support.rs
scripts/: bench-all.sh  check_doc_links.py  checkout-chdb-rust.sh  docker-upload.sh  flamegraph.sh  install-cli.sh  install-dev-deps.sh  install-git-hooks.sh  load.js  load.sh  query.js
(+9 files in other folders)
