[package]
name = "hyperbytedb-cli"
version = "0.8.0"
edition = "2024"
description = "Interactive CLI client for HyperbyteDB — InfluxDB v1-compatible REPL, query, write, and admin"
license = "Apache-2.0"

[[bin]]
name = "hyperbytedb-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "stream", "http2"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "fs", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
rustyline = { version = "15", features = ["derive"] }
comfy-table = "7"
anyhow = "1"
thiserror = "2"
dirs = "6"
rpassword = "7"
url = "2"
toml = "0.8"
flate2 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
hyperbytedb = { path = "../hyperbytedb" }
axum = "0.8"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
