[package]
name = "hyperbytedb"
version = "0.8.3"
edition = "2024"

[dependencies]
# HTTP
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "set-header", "timeout"] }

# Async runtime (`full` pulls in unused extras like `process` and `io-std`)
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "fs",
    "signal",
    "sync",
    "time",
] }

# Line protocol parsing (from InfluxDB IOx)
influxdb-line-protocol = "2"
rmp-serde = "1.3"

# Arrow (columnar msgpack ingest uses RecordBatch for validation benchmarks)
arrow = { version = "54", features = ["ipc"] }

# chdb — local checkout: provides the Arrow C Data Interface insert path
# (`arrow_insert`, `Session::connection`) that the published 1.4.0 provides.
chdb-rust = { path = "../../chdb-rust" }

bytes = "1"
tempfile = "3"

# WAL + metadata
rocksdb = { version = "0.24", features = ["multi-threaded-cf"] }
bincode = "1"
libc = "0.2"

# Global allocator. The default glibc malloc holds freed heap in its arenas
# and almost never returns it to the OS, so the large *transient* startup
# allocations (warming the series dedup caches and replaying the WAL into
# chDB at high cardinality) pin RSS at the startup peak for the life of the
# process. jemalloc, with background purging, returns that memory to the OS.
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }

# Faster, non-poisoning RwLock/Mutex for the hot ingest caches. The std
# locks bottleneck under concurrent reader load (every acquire/release is
# a syscall on contended kernels); parking_lot uses futexes / atomic
# fast-paths that scale much better at the throughput levels this
# database targets. See `IngestSchemaCache` and `RocksDbMetadata`.
parking_lot = "0.12"

# Config
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Error handling
thiserror = "2"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# HTTP client (peer-to-peer replication)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Compression (gzip decompression for write endpoint)
flate2 = "1"

# Auth
argon2 = "0.5"
base64 = "0.22"

# Regex
regex = "1"

# Crypto / checksums
sha2 = "0.10"
crc32fast = "1"

# Raft consensus
openraft = { version = "0.9", features = ["serde"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
async-trait = "0.1"
indexmap = "2.13.0"
comfy-table = "7.2.2"
colored = "3.1.1"
simd-json = { version = "0.17.0", features = ["serde_impl"] }
humantime = "2"
lru = "0.12"

[features]
default = ["columnar-ingest"]
columnar-ingest = []

[[bench]]
name = "ingestion_line_protocol"
harness = false

[[bench]]
name = "ingestion_prepared"
harness = false

[[bench]]
name = "ingestion_columnar"
harness = false

[[bench]]
name = "query_fixed_dataset"
harness = false

[[bench]]
name = "flush_service"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3"
